# rvc-nano

./: .gitignore  AGENTS.md  README.md  assets-download.sh  pyproject.toml  shell.nix
configs/: rvc_model_config.json
configs/v1/: 32k.json  40k.json  48k.json
notebooks/: check_model_weights.py
rvc/configs/: config.py  hubert_cfg.json  rvc_model_config.json
rvc/configs/v2/: 32k.json  48k.json
rvc/synthesizer/: attentions.py  audio.py  commons.py  models.py  modules.py  rmvpe.py
rvc/vc/: hubert.py  modules.py  pipeline.py  utils.py
scripts/: convert_to_safetensors.py  infer.py
src/rvc/: utils.py
src/rvc/synthesizer/: attentions.py  commons.py  models.py  modules.py  rmvpe.py
src/rvc/vc/: hubert.py  pipeline.py
tests/: test_inference_shapes.py
