[project]
name = "rvc"
version = "0.3.5"
description = "An easy-to-use Voice Conversion framework based on VITS."
authors = [{name = "Ftps", email = "ftpsflandre@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch>=2.1.0,<3.0.0",
    "torchaudio",
    "soundfile>=0.12.1,<0.13.0",
    "librosa>=0.10.1,<0.11.0",
    "praat-parselmouth>=0.4.3,<0.5.0",
    "torchcrepe>=0.0.22,<0.1.0",
    "av==16.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "marimo",
    "safetensors",
]

[project.urls]
github = "https://github.com/RVC-Project/Retrieval-based-Voice-Conversion"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling>=1.22.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch-cpu" }
