[project]
name = "rvc-nano"
version = "0.3.5"
description = "An small implementation of RVC (Retrieval Voice Conversion)"
authors = [{name = "Mert Kurttutan", email = "kurttutan.mert@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch>=2.1.0,<3.0.0",
    "torchaudio",
    "soundfile>=0.12.1,<0.13.0",
    "librosa>=0.10.1,<0.11.0",
    "praat-parselmouth>=0.4.3,<0.5.0",
    "torchcrepe>=0.0.22,<0.1.0",
    "av==16.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "marimo",
    "safetensors",
]

[project.urls]
github = "https://github.com/RVC-Project/Retrieval-based-Voice-Conversion"

[build-system]
requires = ["hatchling>=1.22.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rvc"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch-cpu" }

[tool.ruff]
target-version = "py310"
line-length = 128
indent-width = 4
extend-exclude = ["assets", "output", "result", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "prek>=0.3.2",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
